.helm/templates/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: app.5.227.32.0.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-app
            port:
              number: 90
  ingressClassName: nginx
  tls:
  - hosts:
    - app.5.227.32.0.sslip.io
    secretName: app-ssl
